--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -1148,5 +1148,6 @@
     "notReplyToFloorTip": "不回覆該樓層（改為回覆樓主）",
     "expandToolbarTip": "展開工具列",
     "collapseToolbarTip": "收起工具列"
-  }
+  },
+  "workaroundRedirect": "查看對話"
 }
