--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -823,7 +823,8 @@
     },
     "share": "复制分享链接",
     "openInBrowser": "在浏览器中打开",
-    "copyText": "复制文字"
+    "copyText": "复制文字",
+    "copyPid": "复制pid（${pid: String}）"
   },
   "packetCard": {
     "title": "红包",
