--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -823,7 +823,8 @@
     },
     "share": "複製分享連結",
     "openInBrowser": "在瀏覽器中開啟",
-    "copyText": "複製文字"
+    "copyText": "複製文字",
+    "copyPid": "複製pid（${pid: String}）"
   },
   "packetCard": {
     "title": "紅包",
