feat(forum): add actions for thread card
Some actions are available in forum page, before entering thread page.
This commit added a context menu for these actions.

Additionaly this commit added `AdaptiveInkResponse` to works adaptively
on mobile devices and desktop platforms, the `onAdaptiveContextTap` will
be called when:

* Long pressed on mobile platforms.
* Right-clicked (aka secondary tapped) on desktop platforms.

Currently added actions:

* Open thread in browser.
* View thread info: show the copy thread info dialogs we already have.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -1152,5 +1152,8 @@
     "expandToolbarTip": "Expand toolbar",
     "collapseToolbarTip": "Collapse toolbar"
   },
-  "workaroundRedirect": "View conversation"
+  "workaroundRedirect": "View conversation",
+  "threadCard": {
+    "viewInfo": "View thread info"
+  }
 }
