--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -1152,5 +1152,8 @@
     "expandToolbarTip": "展开工具栏",
     "collapseToolbarTip": "收起工具栏"
   },
-  "workaroundRedirect": "查看对话"
+  "workaroundRedirect": "查看对话",
+  "threadCard": {
+    "viewInfo": "查看帖子信息"
+  }
 }
