feat: add settings for thread floor interaction mode
Keep current behavior as default: long press or right click to open
thread context menu.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -202,6 +202,12 @@
       "collapseAppBarWhenScroll": {
         "title": "Hide app bar when scroll",
         "detail": "Hide when scroll down in subreddit and thread pages"
+      },
+      "threadFloorInteractionMode": {
+        "title": "Interaction on thread floor",
+        "detail": "Interaction on floors in thread page",
+        "adaptiveTapOpenContextMenu": "Open context menu when long press or right click",
+        "tapToReply": "Set floor as reply target when tap"
       }
     },
     "checkinSection": {
