feat(log): save log in files
This commit saves log files in log file with a datetime name. Export
recent files via debug section in settings page.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -288,6 +288,11 @@
       "viewLog": {
         "title": "View log"
       },
+      "viewHistoryLog": {
+        "title": "View historical log",
+        "historicalLogs": "Historical logs",
+        "export": "Export"
+      },
       "copyDatabaseDir": "Copy database path"
     },
     "othersSection": {
