--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -226,6 +226,7 @@
       "downloadAgainInfo": "The necessary cache will be downloaded from the server again",
       "images": "Images",
       "emoji": "Emoji",
+      "log": "Log",
       "selectOneCache": "Need to select at least one kind of cache",
       "clearSuccess": "Cleared successfully",
       "scheduledCleaning": {
