--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -226,6 +226,7 @@
       "downloadAgainInfo": "必要的缓存文件将会再次从服务器上下载",
       "images": "图片",
       "emoji": "表情",
+      "log": "日志",
       "selectOneCache": "需要至少选择一项缓存",
       "clearSuccess": "清除成功",
       "scheduledCleaning": {
