--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -23,7 +23,7 @@
     "hours": "${value: int} 小時",
     "days": "${value: int} 天",
     "now": "剛剛",
-    "openSettings": "開啟設定",
+    "settings": "設定",
     "openInBrowser": "在瀏覽器中開啟",
     "close": "關閉"
   },
@@ -207,7 +207,7 @@
         "title": "貼文樓層互動方式",
         "detail": "點擊貼文頁面中的樓層時如何回應",
         "adaptiveTapOpenContextMenu": "長按或右鍵時開啟選單",
-        "tapToReply": "點擊樓層時講目前樓層設為回覆目標"
+        "tapToReply": "點擊樓層時將目前樓層設為回覆目標"
       }
     },
     "checkinSection": {
