--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -23,7 +23,7 @@
     "hours": "${value: int} hours",
     "days": "${value: int} days",
     "now": "Now",
-    "openSettings": "Open settings",
+    "settings": "Settings",
     "openInBrowser": "Open in browser",
     "close": "Close"
   },
