feat!: store thread settings in Quil Delta document
This commit adds support for saving thread settings in quill delta json
files:

* Thread title.
* Thread type id.
* Required read permission.
* Price.
* Additional options.

using versioned Quill Delta json document.

Since this commit, the quill delta json output is `Map<String, dynamic>`
with two keys:

1. `metadata` - stores all thread settings data (see above).
2. `operations` - stores all quill delta operations (same as previous
   versions).

This document structure provides all data we may access when editing a
thread.

After the document is imported, UI elements in `PostEditPage` will
update to the values in `metadata` section. **Note that values not
present in document will not change.**

Compatibility:

* The `version` field in `metadata` section indicates the document
  structure and allows for future changes.
* Older unversioned Quill Delta documents (List<Map<String, dynamic>>)
  are recognized and imported with empty metadata, preserving existing
  thread settings.
* Older app versions cannot read documents generated by this version.

This commit also added a `tabBar` in bottomsheet.

BREAKING CHANGE: Quill Delta json document generated by this version are
incompatible with older app versions.

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -264,7 +264,7 @@
         },
         "useDetectProxy": {
           "title": "Auto detect proxy",
-          "detail":"Use the detected proxy settings when app startup"
+          "detail": "Use the detected proxy settings when app startup"
         },
         "automatedOnPlatform": "Proxy settings are automatically configured on this platform"
       },
@@ -645,6 +645,19 @@
     "whyTitleDialog": {
       "title": "Why here is a thread title?",
       "detail": "Not weired to have a title here when drafting a new thread or editing the first floor of the thread.\nBut it always presents because other floors also have \"subject\" fields to add some <h2> style text ahead of the body of post."
+    },
+    "portation": {
+      "title": "Import and Export",
+      "tip": "Be careful! Paste and import contents will overwrite all contents you editing and thread additional options (if any).",
+      "typesTip": "BBCode only reserve content; Quill Delta reserves both content and thread options",
+      "copyBBCode": "Copy BBCode",
+      "pasteBBCode": "Paste BBCode",
+      "exportBBCode": "Export BBCode",
+      "importBBCode": "Import BBCode",
+      "copyQuilllDelta": "Copy Quill Delta",
+      "pasteQuillDelta": "Paste Quill Delta",
+      "exportQuillDelta": "Export Quill Delta",
+      "importQuillDelta": "Import Quill Delta"
     }
   },
   "chatHistoryPage": {
@@ -1152,7 +1165,7 @@
   },
   "rateLogPage": {
     "title": "Rate log",
-    "tabs" : {
+    "tabs": {
       "accumulated": "Accumulated",
       "original": "Original"
     },
