--- a/lib/i18n/zh-CN.i18n.json
+++ b/lib/i18n/zh-CN.i18n.json
@@ -1104,7 +1104,8 @@
       "tr": "天然 ${value: String}",
       "fh": "腹黑 ${value: String}",
       "jl": "精灵 ${value: String}",
-      "specialAttr": "特殊积分 ${value: String}"
+      "specialAttr": "特殊积分 ${value: String}",
+      "specialAttr2": "特殊积分2 ${value: String}"
     }
   },
   "fastRateTemplate": {
@@ -1119,6 +1120,7 @@
     "tr": "天然",
     "fh": "腹黑",
     "special": "特殊积分",
+    "special2": "特殊积分2",
     "new": "新模板",
     "empty": "没有可用的评分模板",
     "delete": "删除评分模板",
