feat: add text scaling support
Text scaling settings and UI adaption.

Closes: #324

--- a/lib/i18n/en.i18n.json
+++ b/lib/i18n/en.i18n.json
@@ -160,6 +160,10 @@
       "fontFamily": {
         "title": "Font family",
         "dialogTitle": "Choose font"
+      },
+      "textScaleFactor": {
+        "title": "Text scale",
+        "dialogTitle": "Text scale factor"
       }
     },
     "windowSection": {
