--- a/lib/i18n/zh-TW.i18n.json
+++ b/lib/i18n/zh-TW.i18n.json
@@ -160,6 +160,10 @@
       "fontFamily": {
         "title": "字體",
         "dialogTitle": "選擇字體"
+      },
+      "textScaleFactor": {
+        "title": "文字縮放",
+        "dialogTitle": "文字縮放係數"
       }
     },
     "windowSection": {
